[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui_elements/menu_character.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/assets/themes/suspect_ui.tres" type="Theme" id=2]
[ext_resource path="res://ui_elements/appearance/closet.gd" type="Script" id=3]
[ext_resource path="res://ui_elements/assets/themes/hidden.tres" type="Theme" id=5]

[node name="Closet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="MenuMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
margin_right = 496.0
margin_bottom = 1016.0
size_flags_horizontal = 3

[node name="CenterCharacter" type="CenterContainer" parent="MenuMargin/HBoxContainer/CharacterBox"]
margin_right = 496.0
margin_bottom = 776.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuCharacter" parent="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 68.0
margin_right = 476.0
margin_bottom = 708.0
rect_min_size = Vector2( 456, 640 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Character" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter/MenuCharacter"]
margin_right = 456.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="ButtonMargin" type="MarginContainer" parent="MenuMargin/HBoxContainer/CharacterBox"]
margin_top = 792.0
margin_right = 496.0
margin_bottom = 1016.0
custom_constants/margin_right = 32

[node name="Buttons" type="VBoxContainer" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 464.0
margin_bottom = 204.0
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="Select" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
margin_right = 444.0
margin_bottom = 84.0
theme = ExtResource( 2 )
text = "Select"

[node name="Back" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
margin_top = 100.0
margin_right = 444.0
margin_bottom = 184.0
theme = ExtResource( 2 )
text = "Back"

[node name="ClosetBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
margin_left = 512.0
margin_right = 1856.0
margin_bottom = 1016.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCenter" type="CenterContainer" parent="MenuMargin/HBoxContainer/ClosetBox"]
margin_right = 1344.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MenuMargin/HBoxContainer/ClosetBox/LabelCenter"]
margin_left = 469.0
margin_right = 875.0
margin_bottom = 74.0
theme = ExtResource( 2 )
text = "Customization Closet"

[node name="Panel" type="PanelContainer" parent="MenuMargin/HBoxContainer/ClosetBox"]
margin_top = 90.0
margin_right = 1344.0
margin_bottom = 1016.0
rect_min_size = Vector2( 1344, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="MenuMargin/HBoxContainer/ClosetBox/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1336.0
margin_bottom = 918.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="MenuMargin/HBoxContainer/ClosetBox/Panel/ItemList" to="." method="_on_item_selected"]
